# kafka-backup

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.timing  LICENSE  README.md  confluent-backup.yaml  dist-workspace.toml  docker-compose.yml  perf-test-aggressive.properties  perf-test-consumer.properties  perf-test-tuned.properties  streamplus-backup-001-offsets.db-shm  streamplus-backup-001-offsets.db-wal
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  feature.yml  feature_request.md
.github/workflows/: auto-tag.yml  docker-publish.yml  release-tagger.yml  release-version-guard.yml  release.yml  semver-check.yml  test.yml
config/: backup-example.yaml  e2e-backup.yaml  e2e-continuous-backup.yaml  e2e-restore.yaml  example-backup-azure.yaml  example-backup.yaml  example-restore-azure.yaml  example-restore.yaml  gssapi-backup.yaml  gssapi-restore.yaml  test-snapshot-backup.yaml
crates/kafka-backup-cli/: Cargo.toml
crates/kafka-backup-cli/src/: main.rs
crates/kafka-backup-cli/src/commands/: backup.rs  config.rs  describe.rs  list.rs  metrics_runtime.rs  mod.rs  offset_mapping.rs  offset_reset.rs  offset_reset_bulk.rs  offset_rollback.rs  restore.rs  sasl_plugin.rs  security_args.rs  snapshot_groups.rs  status.rs  status_watch.rs  storage_path.rs  three_phase.rs  validate.rs  validate_restore.rs  validation.rs
crates/kafka-backup-cli/tests/: issue_100_storage_paths.rs
crates/kafka-backup-core/: Cargo.toml  README.md
crates/kafka-backup-core/examples/: custom_sasl_plugin.rs
crates/kafka-backup-core/src/: circuit_breaker.rs  compression.rs  config.rs  error.rs  health.rs  lib.rs  manifest.rs
crates/kafka-backup-core/src/backup/: engine.rs  mod.rs
crates/kafka-backup-core/src/evidence/: mod.rs  pdf.rs  report.rs  signing.rs  storage.rs
crates/kafka-backup-core/src/kafka/: admin.rs  client.rs  consumer_groups.rs  fetch.rs  gssapi.rs  metadata.rs  mod.rs  partition_router.rs  produce.rs  scram.rs  tls.rs
crates/kafka-backup-core/src/kafka/sasl/: gssapi.rs  mod.rs  plugin.rs  reauth.rs
crates/kafka-backup-core/src/metrics/: instrumented_storage.rs  labels.rs  mod.rs  registry.rs  server.rs
crates/kafka-backup-core/src/notification/: mod.rs  pagerduty.rs  slack.rs
crates/kafka-backup-core/src/offset_store/: mod.rs  sqlite.rs
crates/kafka-backup-core/src/restore/: engine.rs  helpers.rs  mod.rs  offset_automation.rs  offset_reset.rs  offset_rollback.rs  repartition.rs  three_phase.rs
crates/kafka-backup-core/src/segment/: format.rs  mod.rs  reader.rs  writer.rs
crates/kafka-backup-core/src/storage/: azure.rs  backend.rs  config.rs  filesystem.rs  gcs.rs  memory.rs  mod.rs  s3.rs
crates/kafka-backup-core/src/validation/: config.rs  consumer_group.rs  context.rs  message_count.rs  mod.rs  offset_range.rs  webhook.rs
crates/kafka-backup-core/tests/: chaos_tests.rs  integration.rs  integration_suite_tests.rs  produce_debug.rs  unit_tests.rs
crates/kafka-backup-core/tests/chaos_suite/: broker_failures.rs  mod.rs  network_partitions.rs  partition_leadership.rs
crates/kafka-backup-core/tests/integration_suite/: common.rs  issue_56_missing_topic.rs  issue_67_fixes.rs  mod.rs  offset_semantics.rs  performance_issues.rs  pitr_accuracy.rs  sasl_gssapi_tests.rs  sasl_mock_broker.rs  sasl_oauth_tests.rs  sasl_plugin_mock_tests.rs  sasl_test_fixtures.rs  sasl_tests.rs  snapshot_backup.rs  tls_tests.rs  validation.rs
crates/kafka-backup-core/tests/unit_suite/: backup.rs  compression.rs  helpers.rs  mod.rs  offset_mapping.rs  restore.rs
docs/: Bulk_Offset_Reset_and_Rollback_PRD.md  Fix_Partition_Leader_Routing.md  Fork_Fixes.md  Fork_fixes.md  OSO_Feature_Gate_PRD.md  OSS_Core_Testing_Comprehensive_PRD.md  Offset_Remapping_Deep_Dive.md  PRD-azure-blob-storage-support.md  PRD-sasl-mechanism-plugin.md  Three_Phase_Restore_Guide.md  comparison.md  configuration.md  docker_strategy_kafka_backup.md  kafka_backup_metrics_prd.md  mvp-prd.md  offset-reset-guide.md  performance-prd.md  pr-msk-kraft-runtime-hardening.md  quickstart.md  restore_guide.md  restore_prd_v1.md  storage_api_reference.md  storage_guide.md  storage_pluggable_interface.md
scripts/: e2e-verify-issue-67.sh  test-incremental-backup.sh
scripts/ci/: check-release-version.py
scripts/stress-test/: backup-config-continuous.yaml  backup-config-oneshot.yaml  backup-config-snapshot.yaml  create-topics.sh  docker-compose.yaml  run-continuous-producers.sh  run-stress-test.sh  seed-data.sh  validate-results.sh
scripts/test-validation/: docker-compose.yml  run-test.sh
scripts/verify-issue-29/: backup-config-latency.yaml  backup-config.yaml  create-topics.sh  docker-compose-latency.yaml  docker-compose.yaml  run-latency-test.sh  run-test.sh
tests/reproduce-bug1/: docker-compose.yml  run-test.sh
tests/reproduce-bug2/: run-test-12broker.sh  run-test.sh
tests/reproduce-bug3/: docker-compose.yml  run-test.sh
tests/reproduce-bug4/: run-test.sh
tests/reproduce-bug5/: docker-compose-12broker.yml  docker-compose.yml  run-test-12broker.sh  run-test.sh
tests/sasl-gssapi-test-infra/: .gitignore  Dockerfile.kdc  README.md  docker-compose-gssapi.yml  init-kdc.sh  kadm5.acl  kdc.conf  krb5.conf  run-cli-smoke.sh
tests/sasl-oauth-test-infra/: README.md  docker-compose-oauth.yml  jaas.conf
tests/sasl-test-infra/: README.md  docker-compose-sasl.yml  jaas.conf
tests/tls-test-infra/: docker-compose-tls.yml  generate-certs.sh
