[workspace]
resolver = "2"
members = [
    "crates/kafka-backup-core",
    "crates/kafka-backup-cli",
]

[workspace.package]
version = "0.13.3"
edition = "2021"
license = "MIT"
authors = ["OSO"]
description = "High-performance Kafka backup and restore tool with PITR support"
repository = "https://github.com/osodevops/kafka-backup"
homepage = "https://github.com/osodevops/kafka-backup"

[workspace.dependencies]
# Kafka protocol
kafka-protocol = "0.17"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bytes = "1"

# Compression
zstd = "0.13"
lz4_flex = "0.11"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Collections
indexmap = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Encoding
base64 = "0.22"

# TLS
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "1.0"
ring = "0.17"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }

# Object storage
object_store = { version = "0.11", features = ["aws", "azure", "gcp", "http"] }
url = "2"

# Metrics
prometheus-client = "0.24"

# HTTP server
hyper = { version = "1.9", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"

# Hashing
murmur2 = "0.1"

# Utilities
parking_lot = "0.12"
socket2 = { version = "0.5", features = ["all"] }
crc32fast = "1.4"
regex = "1"

# Cryptographic signing (evidence reports)
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
sha2 = "0.10"

# PDF generation (evidence reports)
printpdf = "0.7"

# HTTP client (webhooks, notifications)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# UUID (validation run IDs)
uuid = { version = "1", features = ["v4"] }

# Testing
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["kafka"] }
tempfile = "3"
tokio-test = "0.4"

# Internal crates
kafka-backup-core = { path = "crates/kafka-backup-core" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
