[package]
name = "kafka-backup-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core engine for Kafka backup and restore operations with point-in-time recovery"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kafka-backup-core"
readme = "README.md"
keywords = ["kafka", "backup", "restore", "streaming", "disaster-recovery"]
categories = ["database", "asynchronous"]
exclude = ["tests/*"]

[dependencies]
# Kafka protocol
kafka-protocol.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
bytes.workspace = true

# Compression
zstd.workspace = true
lz4_flex.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Collections
indexmap.workspace = true

# Time
chrono.workspace = true

# Encoding
base64.workspace = true

# TLS
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
webpki-roots.workspace = true

# Database
sqlx.workspace = true

# Object storage
object_store.workspace = true
url.workspace = true

# Metrics
prometheus-client.workspace = true

# HTTP server
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true

# Utilities
parking_lot.workspace = true
crc32fast.workspace = true
regex.workspace = true
socket2.workspace = true

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
tracing-subscriber.workspace = true
